--- a/SQME_TestApp/Views/Shared/_Layout.cshtml
+++ b/SQME_TestApp/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-controller="SKU" asp-action="Index">SKU</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-controller="PurchaseOrder" asp-action="Index">Orders</a>
                         </li>
                     </ul>
                 </div>
